--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,20 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+input {
+  display: inline-block;
+  width: 120px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.new {
+  display: inline-block;
+  width: 50px;
+}
+.counters {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  max-width: 768px;
+  margin: auto;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.counter {
+  width: 50%;
 }
