--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,26 @@ input {
 .counters {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   max-width: 768px;
   margin: auto;
 }
 .counter {
-  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 126px;
+  height: 126px;
+  box-sizing: border-box;
+  margin: 5px;
+}
+.remove {
+  margin-bottom: 5px;
+}
+.counterBox {
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
+  box-sizing: border-box;
 }
