--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,33 @@
 * {
   box-sizing: border-box;
 }
-body{
-  background-color: #607D8B;
+body {
+  background-color: #607d8b;
 }
 .App {
   text-align: center;
-  background-color: #607D8B;
-  color: #FFFFFF;
+  background-color: #607d8b;
+  color: #ffffff;
 }
-.button{
+.button {
   margin: 2px;
   padding: 6px;
-  background-color: #7C4DFF;
+  background-color: #7c4dff;
   border-radius: 4px;
   box-shadow: 6px 6px 6px -2px rgba(0, 0, 0, 0.4);
+  transition: 0.3s;
+}
+.button:hover {
+  background-color: #455a64;
+  box-shadow: 9px 9px 6px -2px rgba(0, 0, 0, 0.4);
+}
+.button:active {
+  box-shadow: 3px 3px 6px -2px rgba(0, 0, 0, 0.4);
 }
 
-h1{
-  background: #455A64;
-  margin-top:0;
+h1 {
+  background: #455a64;
+  margin-top: 0;
 }
 input {
   display: inline-block;
@@ -38,7 +46,7 @@ input {
   justify-content: center;
   max-width: 768px;
   margin: auto;
-  background-color: #BDBDBD;
+  background-color: #bdbdbd;
   border-radius: 4px;
 }
 .counter {
@@ -62,21 +70,22 @@ input {
   background-color: white;
   color: black;
 }
-.name{
+.name {
   width: 70%;
   overflow-wrap: break-word;
   font-size: 16px;
   line-height: 27px;
 }
-.number{
+.number {
   width: 30%;
   line-height: 54px;
 }
-.plus, .minus {
+.plus,
+.minus {
   width: calc(50% - 3px);
   min-height: 30px;
   color: white;
 }
-.minus{
+.minus {
   margin-left: 0;
 }
