--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   background-color: #607d8b;
   color: #ffffff;
 }
+
 .button {
   margin: 2px;
   padding: 6px;
@@ -20,9 +21,11 @@ body {
 .button:hover {
   background-color: #455a64;
   box-shadow: 9px 9px 6px -2px rgba(0, 0, 0, 0.4);
+  transform: scale(1.02);
 }
 .button:active {
   box-shadow: 3px 3px 6px -2px rgba(0, 0, 0, 0.4);
+  transform: scale(0.98);
 }
 
 h1 {
